documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32NET.CS

        [DllImport("C41W32.DLL", EntryPoint = "_C41_CardOpenEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_CardOpenEx(ref string cardname, Int32 rcvcount, Int32 xmtcount, Int32 cardnum);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CardOpenExx@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_CardOpenExx(ref string cardname, Int32 rcvcount, Int32 xmtcount, Int32 cardnum, IntPtr happwnd, UInt16 uiremovalmsg);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ChPauseCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_ChPauseCheck(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ChStart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_ChStart(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ChStop@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_ChStop(Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CommCall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CommCall(UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CommCheck@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CommCheck(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CommDisable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CommDisable(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CommEnable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CommEnable(UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CommRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C41_CommRd(UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CommRun@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CommRun(ref UInt16 dataptr, UInt16 datacount, ref UInt16 codeptr, UInt16 codecount, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CommStrRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CommStrRd(ref UInt16 valueptr, UInt16 addrval, UInt16 count, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CommStrWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CommStrWr(ref UInt16 valueptr, UInt16 addrval, UInt16 count, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CommTxen@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CommTxen(UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CommWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CommWr(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ConvFromArinc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_ConvFromArinc(UInt32 msgval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_ConvToArinc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_ConvToArinc(UInt32 msgval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleAdvance@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_CycleAdvance();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleBuild@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CycleBuild(Int32 basevalmsgnum, UInt32 nummsgs, ref Int32 minperiod, ref Int32 maxperiod, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleBuildEx@36", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CycleBuildEx(Int32 basevalmsgnum, Int32 nummsgs, ref Int32 minperiod, ref Int32 maxperiod, Int32 speed, IntPtr buf, UInt32 bufsize, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleBuildSt@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CycleBuildSt(Int32 basevalmsgnum, Int32 nummsgs, ref Int32 minperiod, ref Int32 maxperiod, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleCalc@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_CycleCalc();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CycleCheck(ref Int32 minperiod, ref Int32 maxperiod);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleCheckEnd@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CycleCheckEnd();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleCheckMiddle@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CycleCheckMiddle(Int32 msgnum, UInt32 minlen, UInt32 midlen, UInt32 maxlen);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleCheckReal@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CycleCheckReal(Int32 msgnum, UInt32 minlen, UInt32 midlen, UInt32 maxlen);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleCheckStart@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CycleCheckStart();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleConflicts@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_CycleConflicts();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleDisplay@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        unsafe public static extern void C41_CycleDisplay(Int32 nummsgs, ref UInt32 count, ref UInt32* data);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleDivide@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CycleDivide();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleFix@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_CycleFix();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleFixEnd@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CycleFixEnd();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleFixMiddle@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CycleFixMiddle(UInt32 conflicts);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleFixStart@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CycleFixStart();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleHook@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CycleHook(Int32 index, IntPtr ptr);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleInsert@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CycleInsert(UInt32 eventvals, UInt32 index, Int32 msgnum, UInt32 gapval, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleInsertEnd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CycleInsertEnd(UInt32 eventvals, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleInsertStart@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CycleInsertStart(UInt32 eventvals, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleLayout@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CycleLayout();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleMaxval@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_CycleMaxval(ref UInt32 arrayval, UInt32 arrayvalcount);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleMinval@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_CycleMinval(ref UInt32 arrayval, UInt32 arrayvalcount);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleParse@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CycleParse(Int32 basevalmsgnum, Int32 channum, UInt32 handleval);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleReset@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CycleReset();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleRotate@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_CycleRotate();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleShift@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CycleShift(Int32 msgnum, Int32 value);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleSlide@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C41_CycleSlide();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleSlideEnd@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CycleSlideEnd();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleSlideMiddle@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CycleSlideMiddle(UInt32 index, UInt32 count, UInt32 conflicts);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleSlideStart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CycleSlideStart(UInt32 factor);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleSort@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CycleSort();
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleToBit@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_CycleToBit(UInt32 value);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleToMsec@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C41_CycleToMsec(UInt32 value);
        [DllImport("C41W32.DLL", EntryPoint = "_C41_CycleUnsort@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C41_CycleUnsort();
